--- a/src/Presentation/SmartStore.Web/Administration/Views/Order/AddShipment.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Order/AddShipment.cshtml
@@ -90,7 +90,7 @@
                                     @item.QuantityInAllShipments
                                 </td>
                                 <td align="center" style="width: 20%;">
-                                     <input name="qtyToAdd@(item.OrderProductVariantId)" type="text" value="@item.QuantityToAdd" id="qtyToAdd@(item.OrderProductVariantId)" style="width:100px;" />
+                                     <input name="qtyToAdd@(item.OrderItemId)" type="text" value="@item.QuantityToAdd" id="qtyToAdd@(item.OrderItemId)" style="width:100px;" />
                                 </td>
                             </tr>
                         }
