--- a/src/Presentation/SmartStore.Web/Administration/Views/Order/Edit.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Order/Edit.cshtml
@@ -1315,34 +1315,34 @@
                 @foreach (var item in Model.Items)
                 {
                     <script type="text/javascript">
-        $(document).ready(function() {
-        toggleOpvEdit@(item.Id)(false);
-        });
+                        $(document).ready(function() {
+                            toggleOrderItemEdit@(item.Id)(false);
+                        });
                     </script>
         
                     <script type="text/javascript">
-        function toggleOpvEdit@(item.Id) (editMode) {
-        if (editMode) {
-        $('#pnlEditPvUnitPrice@(item.Id)').show();
-        $('#pnlEditPvQuantity@(item.Id)').show();
-        $('#pnlEditPvDiscount@(item.Id)').show();
-        $('#pnlEditPvPrice@(item.Id)').show();
-        $('#btnEditOpv@(item.Id)').hide();
-        $('#btnDeleteOpv@(item.Id)').hide();
-        $('#btnSaveOpv@(item.Id)').show();
-        $('#btnCancelOpv@(item.Id)').show();
-        }
-        else {
-        $('#pnlEditPvUnitPrice@(item.Id)').hide();
-        $('#pnlEditPvQuantity@(item.Id)').hide();
-        $('#pnlEditPvDiscount@(item.Id)').hide();
-        $('#pnlEditPvPrice@(item.Id)').hide();
-        $('#btnEditOpv@(item.Id)').show();
-        $('#btnDeleteOpv@(item.Id)').show();
-        $('#btnSaveOpv@(item.Id)').hide();
-        $('#btnCancelOpv@(item.Id)').hide();
-        }
-        }
+                        function toggleOrderItemEdit@(item.Id) (editMode) {
+                        if (editMode) {
+                            $('#pnlEditUnitPrice@(item.Id)').show();
+                            $('#pnlEditQuantity@(item.Id)').show();
+                            $('#pnlEditDiscount@(item.Id)').show();
+                            $('#pnlEditPrice@(item.Id)').show();
+                            $('#btnEditOrderItem@(item.Id)').hide();
+                            $('#btnDeleteOrderItem@(item.Id)').hide();
+                            $('#btnSaveOrderItem@(item.Id)').show();
+                            $('#btnCancelOrderItem@(item.Id)').show();
+                        }
+                        else {
+                            $('#pnlEditUnitPrice@(item.Id)').hide();
+                            $('#pnlEditQuantity@(item.Id)').hide();
+                            $('#pnlEditDiscount@(item.Id)').hide();
+                            $('#pnlEditPrice@(item.Id)').hide();
+                            $('#btnEditOrderItem@(item.Id)').show();
+                            $('#btnDeleteOrderItem@(item.Id)').show();
+                            $('#btnSaveOrderItem@(item.Id)').hide();
+                            $('#btnCancelOrderItem@(item.Id)').hide();
+                        }
+                    }
                     </script>
 
                 }
@@ -1456,7 +1456,7 @@
                                                     <a href="@Url.Action("DownloadFile", "Download", new { downloadId = item.LicenseDownloadId.Value })">@T("Admin.Orders.Products.License.DownloadLicense")</a>
                                                 }
                                                 <br />
-                                                <input type="submit" id="pvlicensefile" name="pvlicensefile" value="@T("Admin.Orders.Products.License.UploadFile")" onclick="javascript:OpenWindow('@(Url.Action("UploadLicenseFilePopup", "Order", new { id = Model.Id, opvId = item.Id, btnId = "btnRefreshPage", formId = "order-form" }))', 500, 300, true); return false;" class="btn" />
+                                                <input type="submit" id="pvlicensefile" name="pvlicensefile" value="@T("Admin.Orders.Products.License.UploadFile")" onclick="javascript:OpenWindow('@(Url.Action("UploadLicenseFilePopup", "Order", new { id = Model.Id, orderItemId = item.Id, btnId = "btnRefreshPage", formId = "order-form" }))', 500, 300, true); return false;" class="btn" />
                                             </div>
                                         }
                                     </td>
@@ -1487,7 +1487,7 @@
                                         }
                                     }
 
-                                    <div id="pnlEditPvUnitPrice@(item.Id)">
+                                    <div id="pnlEditUnitPrice@(item.Id)">
                                         <table class="order-edit">
                                             <tr>
                                                 <td>
@@ -1511,7 +1511,7 @@
                                 <td align="center" style="width: 10%;">
                                     @item.Quantity
 
-                                    <div id="pnlEditPvQuantity@(item.Id)">
+                                    <div id="pnlEditQuantity@(item.Id)">
                                         <table class="order-edit">
                                             <tr>
                                                 <td colspan="2">
@@ -1548,7 +1548,7 @@
                                     }
                                     <div class="clear">
                                     </div>
-                                    <div id="pnlEditPvDiscount@(item.Id)">
+                                    <div id="pnlEditDiscount@(item.Id)">
                                         <table class="order-edit">
                                             <tr>
                                                 <td>
@@ -1596,7 +1596,7 @@
                                     }
                                     <div class="clear">
                                     </div>
-                                    <div id="pnlEditPvPrice@(item.Id)">
+                                    <div id="pnlEditPrice@(item.Id)">
                                         <table class="order-edit">
                                             <tr>
                                                 <td>
@@ -1618,10 +1618,10 @@
                                     </div>
                                 </td>
                                 <td align="center" style="width: 15%;">
-                                    <input type="submit" name="btnEditOpv@(item.Id)" value="@T("Admin.Common.Edit")" onclick="toggleOpvEdit@(item.Id)(true);return false;" id="btnEditOpv@(item.Id)" class="btn" />
-                                    <input type="submit" name="btnDeleteOpv@(item.Id)" value="@T("Admin.Common.Delete")" id="btnDeleteOpv@(item.Id)" class="btn" onclick="return confirm('@T("Admin.Common.AreYouSure")');" />
-                                    <input type="submit" name="btnSaveOpv@(item.Id)" value="@T("Admin.Common.Save")" id="btnSaveOpv@(item.Id)" class="btn" style="display: none;" onclick="return confirm('@T("Admin.Common.AreYouSure")');" />
-                                    <input type="submit" name="btnCancelOpv@(item.Id)" value="@T("Admin.Common.Cancel")" onclick="toggleOpvEdit@(item.Id)(false);return false;" id="btnCancelOpv@(item.Id)" class="btn" style="display: none;" />
+                                    <input type="submit" name="btnEditOrderItem@(item.Id)" value="@T("Admin.Common.Edit")" onclick="toggleOrderItemEdit@(item.Id)(true);return false;" id="btnEditOrderItem@(item.Id)" class="btn" />
+                                    <input type="submit" name="btnDeleteOrderItem@(item.Id)" value="@T("Admin.Common.Delete")" id="btnDeleteOrderItem@(item.Id)" class="btn" onclick="return confirm('@T("Admin.Common.AreYouSure")');" />
+                                    <input type="submit" name="btnSaveOrderItem@(item.Id)" value="@T("Admin.Common.Save")" id="btnSaveOrderItem@(item.Id)" class="btn" style="display: none;" onclick="return confirm('@T("Admin.Common.AreYouSure")');" />
+                                    <input type="submit" name="btnCancelOrderItem@(item.Id)" value="@T("Admin.Common.Cancel")" onclick="toggleOrderItemEdit@(item.Id)(false);return false;" id="btnCancelOrderItem@(item.Id)" class="btn" style="display: none;" />
                                 </td>
                             </tr>
                         }
