--- a/src/Presentation/SmartStore.Web/Views/Customer/DownloadableProducts.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Customer/DownloadableProducts.cshtml
@@ -61,7 +61,7 @@
                                 @if (item.DownloadId > 0)
                                 {
                                     <div>
-                                        <a class="link" href="@Url.RouteUrl("GetDownload", new { opvId = item.OrderProductVariantGuid })">@T("DownloadableProducts.Fields.Download")</a>
+                                        <a class="link" href="@Url.RouteUrl("GetDownload", new { orderItemId = item.OrderItemGuid })">@T("DownloadableProducts.Fields.Download")</a>
                                     </div>
                                 }
                                 else
@@ -73,7 +73,7 @@
                                 @if (item.LicenseId > 0)
                                 {
                                     <div>
-                                        <a class="link" href="@Url.RouteUrl("GetLicense", new { opvId = item.OrderProductVariantGuid })">@T("DownloadableProducts.Fields.DownloadLicense")</a>
+                                        <a class="link" href="@Url.RouteUrl("GetLicense", new { orderItemId = item.OrderItemGuid })">@T("DownloadableProducts.Fields.DownloadLicense")</a>
                                     </div>
                                 }
                             </td>
