--- a/src/Presentation/SmartStore.Web/Administration/Views/Security/AccessDenied.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Security/AccessDenied.cshtml
@@ -1,9 +1,10 @@
-﻿<div class="section-header">
+﻿@*TODO: Renders this and plugin config header and they overlap cause of absolute position*@
+@*<div class="section-header">
     <div class="title">
         <i class="icon icon-lock"></i>
         @T("Admin.AccessDenied.Title")
     </div>
-</div>
+</div>*@
 <div class="alert alert-error fade in">
     @T("Admin.AccessDenied.Description")
 </div>
