--- a/src/Presentation/SmartStore.Web/Administration/Views/Product/LowStockReport.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Product/LowStockReport.cshtml
@@ -1,4 +1,4 @@
-﻿@model Telerik.Web.Mvc.GridModel<ProductModel>
+﻿@*@model Telerik.Web.Mvc.GridModel<ProductModel>*@
 
 @using Telerik.Web.Mvc.UI
 @using SmartStore.Web.Framework.UI;
@@ -22,27 +22,29 @@
     <table class="adminContent">
         <tr>
             <td>
-                @(Html.Telerik().Grid<ProductModel>(Model.Data)
+                @(Html.Telerik().Grid<ProductModel>()
                     .Name("products-grid")
                     .Columns(columns =>
                     {
-                        columns.Bound(p => p.Name);
-                        columns.Bound(p => p.Sku).Width(100);
-                        columns.Bound(p => p.Price).Width(100);
-                        columns.Bound(p => p.StockQuantity).Width(100);
+                        columns.Bound(p => p.Name)
+                            .Template(x => Html.ActionLink(x.Name, "Edit", new { id = x.Id }))
+                            .ClientTemplate("<a href='Edit/<#= Id #>'><#= Name #></a>");
+                        columns.Bound(p => p.Sku);
+                        columns.Bound(p => p.Price);
+                        columns.Bound(p => p.StockQuantity);
                         columns.Bound(p => p.Published)
                             .Width(100)
                             .Template(item => @Html.SymbolForBool(item.Published))
                             .ClientTemplate(@Html.SymbolForBool("Published"))
                             .Centered();
                         columns.Bound(x => x.Id)
-                            .Width(50)
+                            .Width(90)
                             .Centered()
                             .Template(x => Html.ActionLink(T("Admin.Common.Edit").Text, "Edit", new { id = x.Id }))
                             .ClientTemplate("<a href=\"Edit/<#= Id #>\">" + T("Admin.Common.Edit").Text + "</a>")
                             .Title(T("Admin.Common.Edit").Text);
                     })
-                    .Pageable(settings => settings.Total(Model.Total).PageSize(gridPageSize).Position(GridPagerPosition.Both))
+                    .Pageable(settings => settings.PageSize(gridPageSize).Position(GridPagerPosition.Both))
                     .DataBinding(dataBinding => dataBinding.Ajax().Select("LowStockReportList", "Product"))
                     .EnableCustomBinding(true))
             </td>
